--- a/public/index.html
+++ b/public/index.html
@@ -11,14 +11,12 @@
 
     <title>React App</title>
 
-    <!-- 
-      네이버 지도 API 스크립트 (JavaScript Key)
-      ncpClientId=YOUR_CLIENT_ID (발급받은 Client ID로 교체)
-    -->
-    <script
-      type="text/javascript"
-      src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=24l3wczqf0"
-    ></script>
+    <script 
+    type="text/javascript"
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e240bec0a6bd8345443fc9609da4c243"
+  ></script>
+  
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
