--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <script 
     type="text/javascript"
-    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e240bec0a6bd8345443fc9609da4c243"
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e240bec0a6bd8345443fc9609da4c243&libraries=services"
   ></script>
   
 
