--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta http-equiv="refresh" content="0; URL=/" />
+    <meta charset="UTF-8" />
+    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; url=./index.html" />
+    <script>
+      // 자바스크립트로도 리다이렉션 처리
+      window.location.replace("./index.html");
+    </script>
   </head>
-  <body></body>
+  <body>
+    <p>If you are not redirected automatically, follow this <a href="./index.html">link</a>.</p>
+  </body>
 </html>
