--- a/404.html
+++ b/404.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=./index.html" />
-    <script>
-      // 자바스크립트로도 리다이렉션 처리
-      window.location.replace("./index.html");
-    </script>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Web site created using create-react-app" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <title>React App</title>
+
+    <script 
+    type="text/javascript"
+    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e240bec0a6bd8345443fc9609da4c243&libraries=services"
+  ></script>
+  
+
   </head>
   <body>
-    <p>If you are not redirected automatically, follow this <a href="./index.html">link</a>.</p>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
   </body>
 </html>
