--- a/public/404.html
+++ b/public/404.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>React App</title>
-
-    <script 
-    type="text/javascript"
-    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e240bec0a6bd8345443fc9609da4c243&libraries=services"
-  ></script>
-  
-
+    <meta charset="UTF-8" />
+    <title>Redirecting...</title>
+    <script type="text/javascript">
+      // 요청된 경로 정보를 읽어옵니다.
+      var redirectTo = window.location.pathname + window.location.search;
+      // index.html로 리다이렉트하며 경로 정보를 쿼리 파라미터로 전달합니다.
+      window.location.replace("/index.html?redirect=" + encodeURIComponent(redirectTo));
+    </script>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <p>Redirecting to the app...</p>
   </body>
 </html>
