--- a/404.html
+++ b/404.html
@@ -1,20 +1,1 @@
-<!DOCTYPE html>
-<html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Redirecting...</title>
-    <script>
-      // 현재 URL에서 basename을 제거한 뒤, 해당 경로를 추출
-      var path = window.location.pathname.replace('/bluehousing-site-project', '');
-      // 만약 path가 루트가 아니라면 hash 형태로 변환 (ex: /about -> #/about)
-      if(path !== '' && path !== '/') {
-        window.location.replace('/bluehousing-site-project/#' + path);
-      } else {
-        window.location.replace('/bluehousing-site-project/');
-      }
-    </script>
-  </head>
-  <body>
-    <p>페이지를 찾을 수 없습니다. 리디렉션 중입니다...</p>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/bluehousing-site-project/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/bluehousing-site-project/logo192.png"/><link rel="manifest" href="/bluehousing-site-project/manifest.json"/><title>React App</title><script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e240bec0a6bd8345443fc9609da4c243&libraries=services"></script><script defer="defer" src="/bluehousing-site-project/static/js/main.6084557c.js"></script><link href="/bluehousing-site-project/static/css/main.beb22d8c.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
