--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    
+    <meta 
+      name="description" 
+      content="블루하우징에서 최신 분양 정보와 부동산 트렌드를 확인하세요." 
+    />
+
+    <meta name="naver-site-verification" content="994665c7f059b1ff60d475cb0289780857519b9d" />
+    <meta name="google-site-verification" content="CHYRnnPVcrRSqk422XmHlv9t8G6Bq4gwe245WrlOcg4" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>블루하우징</title>
 
     <script 
-    type="text/javascript"
-    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e240bec0a6bd8345443fc9609da4c243&libraries=services"
-  ></script>
-  
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e240bec0a6bd8345443fc9609da4c243&libraries=services"
+    ></script>
 
   </head>
   <body>
